endpoint refactoring
## Deprecated

- Endpoint: `/instance/connectionState/{instanceName}`

## Added

- Endpoint: `/instance/fetchInstance/{instanceName}`
